@@ -2,7 +2,7 @@ textarea,
 input:not([type=range]) {
   background: var(--tmd-element);
   color: var(--tmd-text);
-  border: min(0.2vh, 0.2vw) solid var(--tmd-accent);
+  border: min(0.2vh, 0.1vw) solid var(--tmd-accent);
 }
 
 input[type=range] {
@@ -64,5 +64,18 @@ input[type=range]::-webkit-slider-runnable-track {
 input[type=range]::-moz-range-thumb,
 input[type=range]::-webkit-slider-thumb {
   background-color: var(--tmd-accent);
+}
+
+.custom-select {
+  --button-color: var(--tmd-element);
+  --disabled-color: var(--tmd-element-disabled);
+  background-color: var(--tmd-element);
+  border: min(0.2vh, 0.1vw) solid var(--tmd-accent);
+  border: min(0.2dvh, 0.1dvw) solid var(--tmd-accent);
+  color: var(--tmd-text);
+}
+
+.custom-select:disabled {
+  background-color: var(--tmd-element-disabled);
 }
 /*# sourceMappingURL=inputs.css.map */
