@@ -173,4 +173,11 @@ code {
 #tmd-reset-container #tmd-reset-buttons-container button .button-label {
   display: contents;
 }
+
+#tmd-theme-type-container {
+  display: flex;
+  gap: min(1vh, 5vw);
+  gap: min(1dvh, 5dvw);
+  color: var(--tmd-text, black);
+}
 /*# sourceMappingURL=themed.css.map */
