@@ -50,6 +50,9 @@ colors.setting.accentDisabled.name = Accent disabled color
 colors.setting.accentDisabled.desc = Used for disabled detail elements.
 colors.setting.text.name = Text color
 colors.setting.text.desc = Used for most text, excluding other colors.
+colors.setting.theme-type-dark = Dark
+colors.setting.theme-type-light = Light
+colors.setting.theme-type.title = Theme type
 
 colors.setting.equipped.name = Equipped color
 colors.setting.equipped.desc = Used for indicating equipped items in inventory. Requires BC Inventory integration to be enabled.
@@ -114,7 +117,7 @@ profiles.text.not_saved_or_already_deleted = is not saved or already deleted!
 # Reset
 reset.label.perma_reset_of_mod_data = - Permanent reset of Themed data -
 reset.label.warning = - Warning -
-reset.label.if_u_confirm_perma_reset = If you confirm, all Themed data (including color settings) will be permanently reset!
+reset.label.if_u_confirm_perma_reset = If you confirm, all Themed data () will be permanently reset!
 reset.label.youll_able_to_use_mod = You will be able to continue using Themed, but all of your configuration will be reset to default!
 reset.label.action_cannot_be_undone = This action cannot be undone!
 
